1. Fixed problems with bookmarks and tooltips.  Now, when a variant is bookmarked, the tooltip will go away.  Then, when the user clicks on the bookmarked variant in the side panel, the matrix tooltip will show. 2.  Decrease height of variant tooltip to prevent clipping.

--- a/assets/css/sass/_tooltip.sass
+++ b/assets/css/sass/_tooltip.sass
@@ -384,7 +384,7 @@ text
 .tooltip-inheritance-mode-label
   display: inline-block
   vertical-align: top
-  padding-top: 8px
+  padding-top: 0px
 
 .tooltip.tooltip-wide
   width: 650px !important
@@ -423,7 +423,7 @@ text
 
   .tooltip-left-column
     float: left
-    padding-top: 10px
+    padding-top: 5px
     padding-bottom: 0px
     .tooltip-row
       width: 330px
@@ -436,7 +436,7 @@ text
     
   .tooltip-right-column
     float: right
-    padding-top: 10px
+    padding-top: 5px
     padding-bottom: 0px
     .tooltip-row
       width: 300px    
@@ -470,7 +470,7 @@ text
         font-size: 14px !important
 
   .row
-    line-height: 14px !important
+    line-height: 13px !important
 
 
     
